--- a/index.html
+++ b/index.html
@@ -119,5 +119,9 @@
     </div>
 
     <script src="app.js"></script>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html> 
