--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="theme-color" content="#4c1d95">
+    <meta name="theme-color" content="#312e81">
 </head>
 
 <body class="bg-gradient-to-br from-indigo-900 to-purple-900 min-h-screen flex flex-col items-center text-white font-sans">
